<resources>
    <string name="app_name">Work Calc Pro</string>
    <string name="employers">Employers</string>
    <string name="calendar">Calendar</string>
    <string name="payslip">Payslip</string>
    <string name="about">About</string>
    <string name="add_employer">Add Employer</string>
    <string name="edit_employer">Edit Employer</string>
    <string name="employer_name">Employer Name</string>
    <string name="hourly_rate">Hourly Rate (£)</string>
    <string name="overtime_rate">Overtime Rate (multiplier)</string>
    <string name="overtime_threshold">Overtime Threshold (hours/day)</string>
    <string name="add_shift">Add Shift</string>
    <string name="edit_shift">Edit Shift</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="break_duration">Break (minutes)</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="regular_hours">Regular Hours</string>
    <string name="overtime_hours">Overtime Hours</string>
    <string name="gross_pay">Gross Pay</string>
    <string name="income_tax">Income Tax</string>
    <string name="national_insurance">National Insurance</string>
    <string name="net_pay">Net Pay</string>
    <string name="uc_deduction">UC Deduction</string>
    <string name="take_home">Take Home Pay</string>
    <string name="export_pdf">Export PDF</string>
    <string name="share_text">Share as Text</string>
    <string name="check_updates">Check for Updates</string>
    <string name="version">Version</string>
    <string name="no_employers">No employers added yet.\nTap + to add one.</string>
    <string name="no_shifts">No shifts for this day.\nTap + to add one.</string>
    <string name="uc_calculator">UC Calculator</string>
    <string name="has_housing_costs">Has Housing Costs</string>
    <string name="monthly_earnings">Monthly Earnings</string>
    <string name="work_allowance">Work Allowance</string>
    <string name="effective_tax_rate">Effective Tax Rate</string>
    <string name="github_repo">GitHub Repository</string>
    <string name="share_app">Share App</string>
    <string name="update_available">Update available: %s</string>
    <string name="up_to_date">You\'re up to date!</string>
    <string name="update_check_failed">Could not check for updates</string>
    <string name="payslip_period">Payslip Period</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="select_employer">Select Employer</string>
    <string name="all_employers">All Employers</string>
    <string name="confirm_delete">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>